# name: test_geometry_usb_rect[atreus_42-case_outer]
  <class 'list'> [
    <class 'tuple'> (
      -116.32342823957953,
      63.47054789790366,
    ),
    <class 'tuple'> (
      116.32342823957953,
      63.47054789790366,
    ),
    <class 'tuple'> (
      134.60585007869207,
      -40.21421869683712,
    ),
    <class 'tuple'> (
      12.730680709720128,
      -64.75037917065796,
    ),
    <class 'tuple'> (
      -12.730680709720124,
      -64.75037917065796,
    ),
    <class 'tuple'> (
      -134.60585007869207,
      -40.214218696837115,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_42-reset_button]
  <class 'tuple'> (
    -24,
    41,
  )
---
# name: test_geometry_usb_rect[atreus_42-screws]
  <class 'list'> [
    <class 'tuple'> (
      -109.98540861790046,
      54.4189178085103,
    ),
    <class 'tuple'> (
      109.98540861790046,
      54.4189178085103,
    ),
    <class 'tuple'> (
      -11.25,
      54.4189178085103,
    ),
    <class 'tuple'> (
      11.25,
      54.4189178085103,
    ),
    <class 'tuple'> (
      123.3563182982541,
      -36.07410076620267,
    ),
    <class 'tuple'> (
      -123.3563182982541,
      -36.07410076620267,
    ),
    <class 'tuple'> (
      29.335718542082912,
      -55.69874908126461,
    ),
    <class 'tuple'> (
      -29.33571854208291,
      -55.69874908126461,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_42-spacer_inner]
  <class 'list'> [
    <class 'tuple'> (
      -103.64738899622141,
      45.36728771911694,
    ),
    <class 'tuple'> (
      103.64738899622141,
      45.36728771911694,
    ),
    <class 'tuple'> (
      116.50258989990536,
      -27.538179453478996,
    ),
    <class 'tuple'> (
      25.406719953078248,
      -46.647118991871245,
    ),
    <class 'tuple'> (
      -25.406719953078245,
      -46.647118991871245,
    ),
    <class 'tuple'> (
      -116.50258989990536,
      -27.538179453478996,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_42-spacer_thickness]
  3
---
# name: test_geometry_usb_rect[atreus_42-thickness]
  3
---
# name: test_geometry_usb_rect[atreus_42-usb_rect]
  <class 'list'> [
    <class 'tuple'> (
      2.0,
      63.47054789790366,
    ),
    <class 'tuple'> (
      2.0,
      45.36728771911694,
    ),
    <class 'tuple'> (
      -2.0,
      45.36728771911694,
    ),
    <class 'tuple'> (
      -2.0,
      63.47054789790366,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_44-case_outer]
  <class 'list'> [
    <class 'tuple'> (
      -117.88278887502855,
      63.47054789790365,
    ),
    <class 'tuple'> (
      117.88278887502855,
      63.47054789790365,
    ),
    <class 'tuple'> (
      136.1652107141411,
      -40.21421869683712,
    ),
    <class 'tuple'> (
      14.29004134516916,
      -64.75037917065796,
    ),
    <class 'tuple'> (
      -14.290041345169163,
      -64.75037917065796,
    ),
    <class 'tuple'> (
      -136.1652107141411,
      -40.214218696837115,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_44-reset_button]
  <class 'tuple'> (
    -24,
    41,
  )
---
# name: test_geometry_usb_rect[atreus_44-screws]
  <class 'list'> [
    <class 'tuple'> (
      -111.54476925334949,
      54.41891780851029,
    ),
    <class 'tuple'> (
      111.54476925334949,
      54.418917808510294,
    ),
    <class 'tuple'> (
      -11.25,
      54.41891780851029,
    ),
    <class 'tuple'> (
      11.25,
      54.418917808510294,
    ),
    <class 'tuple'> (
      124.91567893370312,
      -36.07410076620267,
    ),
    <class 'tuple'> (
      -124.91567893370312,
      -36.07410076620267,
    ),
    <class 'tuple'> (
      30.895079177531944,
      -55.69874908126461,
    ),
    <class 'tuple'> (
      -30.895079177531947,
      -55.69874908126461,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_44-spacer_inner]
  <class 'list'> [
    <class 'tuple'> (
      -105.20674963167043,
      45.36728771911693,
    ),
    <class 'tuple'> (
      105.20674963167043,
      45.36728771911693,
    ),
    <class 'tuple'> (
      118.06195053535438,
      -27.538179453478996,
    ),
    <class 'tuple'> (
      26.96608058852728,
      -46.647118991871245,
    ),
    <class 'tuple'> (
      -26.966080588527284,
      -46.647118991871245,
    ),
    <class 'tuple'> (
      -118.06195053535438,
      -27.538179453478996,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_44-spacer_thickness]
  3
---
# name: test_geometry_usb_rect[atreus_44-thickness]
  3
---
# name: test_geometry_usb_rect[atreus_44-usb_rect]
  <class 'list'> [
    <class 'tuple'> (
      2.0,
      63.47054789790365,
    ),
    <class 'tuple'> (
      2.0,
      45.36728771911693,
    ),
    <class 'tuple'> (
      -2.0,
      45.36728771911693,
    ),
    <class 'tuple'> (
      -2.0,
      63.47054789790365,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_62-case_outer]
  <class 'list'> [
    <class 'tuple'> (
      -131.7354601711398,
      75.11579487573263,
    ),
    <class 'tuple'> (
      131.73546017113978,
      75.11579487573263,
    ),
    <class 'tuple'> (
      153.31719738592398,
      -47.28031902624011,
    ),
    <class 'tuple'> (
      12.730680709720106,
      -75.11579487573263,
    ),
    <class 'tuple'> (
      -12.730680709720145,
      -75.11579487573263,
    ),
    <class 'tuple'> (
      -153.31719738592403,
      -47.28031902624011,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_62-reset_button]
  <class 'tuple'> (
    -24,
    41,
  )
---
# name: test_geometry_usb_rect[atreus_62-screws]
  <class 'list'> [
    <class 'tuple'> (
      -125.39744054946075,
      66.06416478633928,
    ),
    <class 'tuple'> (
      125.39744054946071,
      66.06416478633928,
    ),
    <class 'tuple'> (
      -11.25,
      66.06416478633928,
    ),
    <class 'tuple'> (
      11.25,
      66.06416478633928,
    ),
    <class 'tuple'> (
      142.067665605486,
      -43.14020109560566,
    ),
    <class 'tuple'> (
      -142.06766560548604,
      -43.14020109560566,
    ),
    <class 'tuple'> (
      29.33571854208289,
      -66.06416478633926,
    ),
    <class 'tuple'> (
      -29.33571854208293,
      -66.06416478633926,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_62-spacer_inner]
  <class 'list'> [
    <class 'tuple'> (
      -119.0594209277817,
      57.01253469694591,
    ),
    <class 'tuple'> (
      119.05942092778166,
      57.01253469694591,
    ),
    <class 'tuple'> (
      135.21393720713726,
      -34.60427978288199,
    ),
    <class 'tuple'> (
      25.406719953078227,
      -57.012534696945906,
    ),
    <class 'tuple'> (
      -25.406719953078266,
      -57.012534696945906,
    ),
    <class 'tuple'> (
      -135.2139372071373,
      -34.60427978288199,
    ),
  ]
---
# name: test_geometry_usb_rect[atreus_62-spacer_thickness]
  3
---
# name: test_geometry_usb_rect[atreus_62-thickness]
  3
---
# name: test_geometry_usb_rect[atreus_62-usb_rect]
  <class 'list'> [
    <class 'tuple'> (
      2.0,
      75.11579487573263,
    ),
    <class 'tuple'> (
      2.0,
      57.01253469694591,
    ),
    <class 'tuple'> (
      -2.0,
      57.01253469694591,
    ),
    <class 'tuple'> (
      -2.0,
      75.11579487573263,
    ),
  ]
---
